<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".CrimeFragment">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/crime_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/crime_title_text_view" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="52dp" android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/crime_title_text_edit" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" android:inputType="textAutoCorrect" android:hint="@string/crime_title_hint" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/crime_title_text_view" />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/suspect_button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" android:inputType="textPersonName" android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/crime_solved_checkbox" android:text="@string/suspect_label" android:contentDescription="@string/suspect_label" android:hint="@string/suspect_label" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/crime_details_text_view" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" android:text="@string/crime_details_label" android:textAppearance="@style/TextAppearance.AppCompat.Button" app:layout_constraintTop_toBottomOf="@+id/crime_date_button" android:layout_marginTop="16dp" />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/crime_details_text_edit" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" android:inputType="textMultiLine" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/crime_details_text_view" />
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/crime_solved_checkbox" android:text="@string/crime_solved_label" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/crime_details_text_edit" />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/crime_date_button" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/crime_title_text_edit" android:layout_marginTop="5dp" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>